# floodlight

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  from_kloppy.ipynb  pyproject.toml  settings.py  setup.cfg
.data/kinexon_dataset/: anonymized_data.csv
.data/toy_dataset/: ballstatus_ht1.npy  events_away_ht2.csv  events_home_ht1.csv  events_home_ht2.csv  possession_ht1.npy  possession_ht2.npy  xy_away_ht1.npy  xy_away_ht2.npy  xy_ball_ht1.npy  xy_ball_ht2.npy  xy_home_ht1.npy
.github/ISSUE_TEMPLATE/: -collision--bug-report--collision-.md  -scroll--documentation--scroll-.md  -sparkles--feature-request--sparkles-.md
.github/workflows/: build.yaml  build_and_test.yaml  linting.yaml  test_python_version.yaml
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/compendium/: 0_compendium.rst  1_data.rst  2_design.rst  3_time.rst  4_space.rst  5_identifier.rst
docs/source/guides/: contrib_manual.rst  getting_started.rst  tutorial_analysis.rst  tutorial_matchsheets.rst
docs/source/modules/core/: code.rst  core.rst  definitions.rst  events.rst  pitch.rst  property.rst  teamsheet.rst  xy.rst
docs/source/modules/io/: catapult.rst  catapultApi.rst  datasets.rst  dfl.rst  io.rst  kinexon.rst  opta.rst  sample_data.rst  secondspectrum.rst  skillcorner.rst  soccerbot.rst  sportradar.rst  statsbomb.rst  statsperform.rst  tracab.rst  utils.rst
docs/source/modules/metrics/: entropy.rst  metrics.rst
docs/source/modules/models/: geometry.rst  kinematics.rst  kinetics.rst  models.rst  space.rst
docs/source/modules/transforms/: filter.rst  transforms.rst
docs/source/modules/utils/: types.rst  utils.rst
docs/source/modules/vis/: pitches.rst  positions.rst  utils.rst  vis.rst
docs/source/tests/: pytest.rst  testing.rst
floodlight/: __init__.py  settings.py
floodlight/core/: code.py  definitions.py  events.py  pitch.py  property.py  teamsheet.py  xy.py  xyz.py
floodlight/filter/: filter.py
floodlight/io/: catapult.py  catapultApi.py  datasets.py  dfl.py  eigd.py  from_kloppy.py  kinexon.py  new_sample_data.py  opta.py  secondspectrum.py  skillcorner.py  soccerbot.py  sportradar.py  sportscode.py  statsbomb.py  statsperform.py  tracab.py  utils.py
floodlight/io/datasets/: eigd.py
floodlight/io/dfl/: parser.py
floodlight/io/sample_data/: away_events.py  away_xy.py  ball_xy.py  ballstatus_ht2.npy  codes.py  events_away_ht1.csv  home_events.py  home_xy.py  loader.py  pitch.py  xy_home_ht2.npy
floodlight/io/utils/: extract.py  loader.py
floodlight/metrics/: apen.py  entropy.py
floodlight/models/: base.py  distance_model.py  geometry.py  kinematics.py  kinetics.py  models_temp.py  space.py  spatialMetricsModel.py  utils.py
floodlight/transforms/: filter.py
floodlight/utils/: exceptions.py  types.py  typing.py
floodlight/vis/: pitches.py  plotting.py  positions.py  utils.py  xy_positions.py
paper/: paper.bib  paper.md
tests/: test_smoke.py
tests/io/: test_dfl.py  test_statsperform.py
tests/test_core/: conftest.py  test_code.py  test_definitions.py  test_events.py  test_pitch.py  test_teamsheet.py  test_xy.py
tests/test_io/: conftest.py  test_catapult.py  test_datasets.py  test_eigd.py  test_kinexon.py  test_statsbomb.py  test_utils.py
tests/test_metrics/: test_apen.py
tests/test_models/: conftest.py  test_base.py  test_distanceModel.py  test_geometry.py  test_kinematics.py  test_kinetics.py  test_space.py  test_spatialMetricsModel.py  test_utils.py
tests/test_transforms/: conftest.py  test_filter.py
tests/test_vis/: conftest.py  test_pitches.py  test_positions.py  test_utils.py
