[tool.poetry]
name = "floodlight"
version = "0.3.3"
description = "A high-level framework for sports data analysis"
authors = ["draabe <draabx@posteo.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/floodlight-sports/floodlight"
repository = "https://github.com/floodlight-sports/floodlight"
documentation = "https://floodlight.readthedocs.io/en/latest/"
keywords =   ["sports analytics", "sports data analysis", "tracking data"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix"

]
include = [
    "LICENSE",
    "CHANGELOG.md"
]


[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.21.2"
scipy = "^1.8.0"
pandas = "^1.3.4"
lxml = "^4.6.4"
iso8601 = "^1.0.2"
pytz = "^2021.3"
h5py = "^3.6.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
commitizen = "^2.20.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.12.0"
auto-changelog = "^0.5.3"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
markers = [
    "unit: marks unit tests (deselect with '-m \"not unit\"')",
    "plot: marks tests creating visualizations (deselect with '-m \"not plot\"')"
]
