[tool.poetry]
name = "floodlight"
version = "1.1.0"
description = "A high-level framework for sports data analysis"
authors = ["draabe <draabx@posteo.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/floodlight-sports/floodlight"
repository = "https://github.com/floodlight-sports/floodlight"
documentation = "https://floodlight.readthedocs.io/en/latest/"
keywords =   ["sports analytics", "sports data analysis", "tracking data"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix"

]
include = [
    "LICENSE",
    "CHANGELOG.md"
]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^2.1.1"
scipy = "^1.14.1"
pandas = "^2.2.2"
lxml = "^5.3.0"
iso8601 = "^2.1.0"
pytz = "^2024.1"
h5py = "^3.11.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
commitizen = "^3.29.0"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.3.0"
auto-changelog = "^0.6.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
markers = [
    "unit: marks unit tests (deselect with '-m \"not unit\"')",
    "plot: marks tests creating visualizations (deselect with '-m \"not plot\"')"
]
